@@ -103,6 +103,8 @@ Core
   would break sessions up into separate directories instead of putting all
   sessions in a huge directory.
 
+* Encoding and fallback for reading/writing files while in UTF-8 mode.
+
 Payment
 -------
 
